--- a/indexeddb/src/app/detail/detail.component.html
+++ b/indexeddb/src/app/detail/detail.component.html
@@ -13,7 +13,7 @@
 </ion-row>
 <ion-row>
   <ion-col>
-    <p>Depth: {{earthquake.depth | number}} km | Distance to me: {{distanceToReference(earthquake) | number:'1.0-0'}}
+    <p>깊이: {{earthquake.depth | number}} km | 현재위치와의 거리: {{distanceToReference(earthquake) | number:'1.0-0'}}
       km</p>
   </ion-col>
 </ion-row>
